<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    android:layout_margin="12dp"
    android:padding="10dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Image-->
        <ImageView
            android:id="@+id/task_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_margin="15dp"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <!-- Titre-->
            <TextView
            android:id="@+id/task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre_tache"
            android:textColor="#333"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/task_image"
            app:layout_constraintTop_toTopOf="@id/task_image"
            app:layout_constraintEnd_toEndOf="parent" />

                <!-- Description-->
            <TextView
            android:id="@+id/task_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_tache"
            android:textColor="#666"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/task_image"
            app:layout_constraintTop_toBottomOf="@id/task_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp" />

                <!-- Statut-->
            <TextView
            android:id="@+id/task_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en_cours"
            android:textColor="#FFA500"
            android:textSize="12sp"
            android:background="#FFF3E0"
            android:padding="8dp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toEndOf="@id/task_image"
            app:layout_constraintTop_toBottomOf="@id/task_description" />

            <!-- Échéance-->
            <TextView
            android:id="@+id/task_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Échéance : 12/03/2025"
            android:textColor="#888"
            android:textSize="16sp"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                >

                <!-- Modifier-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_update"
                    app:cornerRadius="10dp"
                    android:backgroundTint="@color/green"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/modifier"
                    android:layout_marginRight="10dp"
                />

                <!-- Supprimer-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_delete"
                    app:cornerRadius="10dp"
                    android:backgroundTint="@color/red"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/supprimer"
                />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>